--- a/laravel-ui/package.json
+++ b/laravel-ui/package.json
@@ -15,6 +15,9 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "sass": "^1.56.1",
-        "vite": "^4.0.0"
+        "vite": "^4.1.4"
+    },
+    "dependencies": {
+        "boostrap": "^2.0.0"
     }
 }
